thanos_extras_deployments/thanos_query_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-query
  namespace: cattle-monitoring-system
  labels:
    app: thanos-query
spec:
  selector:
    app: thanos-query
  ports:
  - name: http
    port: 9090
    targetPort: http
