thanos_extras_deployments/thanos_sidecar_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-sidecar
  namespace: cattle-monitoring-system
  labels:
    app: thanos-sidecar
spec:
  clusterIP: None
  selector:
    app: prometheus
    prometheus: rancher-monitoring-prometheus
  ports:
  - name: grpc
    port: 10901
    targetPort: grpc
